--- a/css/styles.css
+++ b/css/styles.css
@@ -388,10 +388,22 @@ ul {
 }
 
 .partners .item {
+  /* display: block; */
   flex-basis: calc((100% - 60px * 3) / 3);
-  
+  /* font-display: flex;
+  justify-content: center;;
+  align-items: center; */
+  /* height: 75px; */
   margin-top: 60px;
   margin-left: 60px;
+  /* padding: auto; */
+}
+
+.img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75px;
 }
 
 .label {
