--- a/css/styles.css
+++ b/css/styles.css
@@ -418,9 +418,41 @@ ul {
   line-height: 1;
   color: var(--label-color);
 }
+
+.news .section-title {
+  margin-bottom: 98px;
+}
+
 .news h3 {
   line-height: 1.3;
 }
+
+/* .news .label {
+  flex-basis: calc(10%);
+  margin-right: 30px;
+} */
+
+.news .item {
+  display: flex;
+  margin-top: -60px;
+  margin-right: -60px;
+}
+
+.news .label-image-content {
+  flex-basis: calc((100% - 60px) / 2);
+  margin-top: 60px;
+  margin-right: 60px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.news .text-content {
+  flex-basis: calc((100% - 60px) / 2);
+  margin-top: 60px;
+  margin-right: 60px;
+}
+
+
 
 .details {
   font-size: 12px;
