--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ ul {
   width: 1200px;
   margin-right: auto;
   margin-left: auto;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 
 .content-in-row {
@@ -90,7 +90,7 @@ ul {
 .section {
   padding-top: 200px;
   padding-bottom: 200px;
-  outline: 1px solid blue;
+  /* outline: 1px solid blue; */
 }
 
 
