--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ ul {
   width: 1200px;
   margin-right: auto;
   margin-left: auto;
-  /* outline: 1px solid red; */
+  outline: 1px solid red;
 }
 
 .content-in-row {
@@ -90,7 +90,7 @@ ul {
 .section {
   padding-top: 200px;
   padding-bottom: 200px;
-  /* outline: 1px solid blue; */
+  outline: 1px solid blue;
 }
 
 
@@ -1028,6 +1028,49 @@ footer .button:focus,
   color: var(--label-color);
   margin-bottom: 0;
 }
+
+.features {
+  padding-top: 100px;
+}
+
+.features__page-title {
+  display: inline-block;
+  margin-bottom: 146px;
+}
+
+.features__item {
+  position: relative;
+  margin-top: -26px;
+}
+
+/* .features__item > .link {
+  font-size: 22px;
+} */
+
+.features__item .flex-item {
+  margin-top: 26px;
+  line-height: 1.3;
+}
+
+.features__item .flex-list {
+  margin-top: -26px;
+}
+
+.features__item .flex-list::before {
+  position: absolute;
+  top: -14px;
+  right: 0;
+  content: "";
+  display: block;
+  width: 570px;
+  height: 1px;
+  background-color: var(--label-color);
+}
+
+.features__item .list .link {
+  line-height: 1;
+} 
+
 
 
 .kind {
